Geschichtstage Panel and a few small fixes (#35)
* fix: change tagging, re #31

* fix: fix type of quotation marks in description

see https://de.wikipedia.org/wiki/Anf%C3%BChrungszeichen#Andere_Sprachen

* fix: fix scrollbar css

* feat: add emono screenshot

* feat: add Geschichtstage panel to products

* fix: fix image file path

--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@
 
 .sidebar-navigation {
 	overflow: scroll;
-	scrollbar-color: #a5d7d2 white;
+	scrollbar-color: #ffe880 white;
 	scrollbar-width: thin;
 }
 
